Move from Spring Boot to Javalin and upgrade to Java 17